--- a/requirements.txt
+++ b/requirements.txt
@@ -1,99 +1,69 @@
-alembic==1.2.1
 appnope==0.1.0
-attrs==19.2.0
+attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.0
-boto==2.49.0
-boto3==1.9.245
-botocore==1.12.245
 certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
-cloudpickle==1.2.2
-configparser==4.0.2
 cycler==0.10.0
-Cython==0.29.13
-databricks-cli==0.9.0
 decorator==4.4.0
 defusedxml==0.6.0
-dill==0.3.1.1
-docker==4.1.0
-docutils==0.15.2
 entrypoints==0.3
 Flask==1.1.1
-gensim==3.8.1
-gitdb2==2.0.6
-GitPython==3.0.3
-gorilla==0.3.0
-gunicorn==19.9.0
 idna==2.8
-influxdb==5.2.3
+importlib-metadata==0.23
 ipykernel==5.1.2
 ipython==7.8.0
 ipython-genutils==0.2.0
-ipywidgets==7.5.1
 itsdangerous==1.1.0
 jedi==0.15.1
-Jinja2==2.10.1
-jmespath==0.9.4
+Jinja2==2.10.3
 joblib==0.14.0
-jsonschema==3.0.2
-jupyter==1.0.0
-jupyter-client==5.3.3
-jupyter-console==6.0.0
-jupyter-core==4.5.0
+json5==0.8.5
+jsonschema==3.1.1
+jupyter-client==5.3.4
+jupyter-core==4.6.0
+jupyterlab==1.1.4
+jupyterlab-server==1.0.6
 kiwisolver==1.1.0
-Mako==1.1.0
 MarkupSafe==1.1.1
 matplotlib==3.1.1
 mistune==0.8.4
-mlflow==1.3.0
+more-itertools==7.2.0
 nbconvert==5.6.0
 nbformat==4.4.0
-nltk==3.4.5
+nose==1.3.7
 notebook==6.0.1
-numpy==1.17.2
-pandas==0.25.1
+numpy==1.17.3
+opencv-python==4.1.1.26
+pandas==0.25.2
 pandocfilters==1.4.2
 parso==0.5.1
 pexpect==4.7.0
 pickleshare==0.7.5
+Pillow==6.2.1
 prometheus-client==0.7.1
-prompt-toolkit==2.0.9
-protobuf==3.10.0
+prompt-toolkit==2.0.10
 ptyprocess==0.6.0
 Pygments==2.4.2
 pyparsing==2.4.2
 pyrsistent==0.15.4
 python-dateutil==2.8.0
-python-editor==1.0.4
-pytz==2019.2
-PyYAML==5.1.2
+pytz==2019.3
 pyzmq==18.1.0
-qtconsole==4.5.5
-querystring-parser==1.2.4
 requests==2.22.0
-s3transfer==0.2.1
 scikit-learn==0.21.3
 scipy==1.3.1
 seaborn==0.9.0
 Send2Trash==1.5.0
-simplejson==3.16.0
 six==1.12.0
 sklearn==0.0
-smart-open==1.8.4
-smmap2==2.0.5
-SQLAlchemy==1.3.9
-sqlparse==0.3.0
-tabulate==0.8.5
 terminado==0.8.2
 testpath==0.4.2
 tornado==6.0.3
-traitlets==4.3.2
+traitlets==4.3.3
 urllib3==1.25.6
 wcwidth==0.1.7
 webencodings==0.5.1
-websocket-client==0.56.0
 Werkzeug==0.16.0
-widgetsnbextension==3.5.1
-word2vec==0.10.2
+zipp==0.6.0
