--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ decorator==4.4.0
 defusedxml==0.6.0
 entrypoints==0.3
 Flask==1.1.1
+Flask-Cors==3.0.8
 gunicorn==19.9.0
 idna==2.8
 importlib-metadata==0.23
